docs(2x-grid): Use correct import for _grid.scss

--- a/src/pages/guidelines/2x-grid/implementation.mdx
+++ b/src/pages/guidelines/2x-grid/implementation.mdx
@@ -73,7 +73,7 @@ You can include the grid in one of two ways:
 @import 'carbon-components/scss/globals/scss/styles.scss';
 
 // If you're wanting to import the grid
-@import 'carbon-components/scss/globals/grid/grid';
+@import 'carbon-components/scss/globals/grid/_grid.scss';
 ```
 
 <br />
@@ -90,7 +90,7 @@ $feature-flags: (
 @import 'carbon-components/scss/globals/scss/styles.scss';
 
 // If you want to import the grid
-@import 'carbon-components/scss/globals/grid/grid';
+@import 'carbon-components/scss/globals/grid/_grid.scss';
 ```
 
 <InlineNotification>
